css fixes to browse trails page. Hides search bar on mobile

--- a/html/sites/all/themes/nfnc/css/nfnc-alpha-default-narrow.css
+++ b/html/sites/all/themes/nfnc/css/nfnc-alpha-default-narrow.css
@@ -78,6 +78,7 @@ ul#main-menu li {
 
 /*BROWSE TRAILS*/
 
+/* this block is not needed anymore maybe? */
 .view-id-map_filter_districts .attachment .view-id-map_filter_districts .views-row {
 	width:40%;
 	margin-right:1em;
@@ -85,8 +86,21 @@ ul#main-menu li {
 	float:left;
 }
 
+.block-map-filter-districts-block-1 .views-row {
+	width:45%;
+	margin-right:1em;
+	position:relative;
+	float:left;
+}
+
+/* this block is not needed anymore maybe? */
 .view-display-id-attachment_2 {
 	width:100%;
+}
+
+#block-views-map-filter-districts-block-1 {
+    margin-top: 1em;
+    width: 100%;
 }
 
 .view-map-filter-leaflet .view-filters,
