--- a/html/sites/all/themes/nfnc/css/nfnc-alpha-default-wide.css
+++ b/html/sites/all/themes/nfnc/css/nfnc-alpha-default-wide.css
@@ -84,7 +84,7 @@ h6.site-slogan {
 }
 
 .block-map-filter-districts-block-1 {
-	width:25%;
+	width:220px !important;
 }
 
 .block-block-10 {
@@ -93,7 +93,7 @@ h6.site-slogan {
 }
 
 .view-display-id-block_1 .views-row {
-	width:50%;
+	width:100%;
 	margin-right:1em;
 	position:relative;
 	float:left;
